# The-5zig-Mod

./: .gitattributes  .gitignore  .gitmodules  .travis-ci.yml  .travis.yml  DEV_ENV.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  mod-compatibility.md  mod_compat.yml
.travis/: .gitignore  1_12_2.gradle  1_8_9.gradle  build.sh  git.sh
gradle/wrapper/: gradle-wrapper.properties
mod/: .gitignore  build.gradle  build.xml  common.gradle  versions.gradle
mod/gradle/wrapper/: gradle-wrapper.properties
mod/licenses/: NOTICE.txt
mod/native/keyboard/razer/: ChromaSDKImpl.cpp  ChromaSDKImpl.h  compile.bat  generate_headers.bat  razer.cpp  razer.h
mod/native/keyboard/razer/inc/: RzChromaSDKTypes.h
mod/native/keyboard/roccat/: CMakeLists.txt  compile.bat  compile.sh  generate_headers.bat  roccat.cpp  roccat.h
mod/native/keyboard/roccat/inc/: ROCCAT_Talk.h
mod/native/wmp/: generate_headers.bat  nwmp.cpp  nwmp.h
mod/src/main/java/: BytecodeHook.java
mod/src/main/resources/: coremod.js  credits.txt  fabric.mod.json  mcmod.info  mixins.json  mixins.the5zigmod.optional.json  mixins_forge.json  pack.mcmeta  plugin_sock.pub  plugin_socket.pub  the5zigmod.mixins.json  the5zigmod.properties
mod/src/main/resources/assets/the5zigmod/: sounds.json
mod/src/main/resources/core/: modules.json
mod/src/main/resources/core/itunes/: iTunes.applescript
mod/src/main/resources/core/messages/: bergwerk.properties  cytooxien.properties  gommehd.properties  hypixel.properties  (+7 more)
(+890 files in other folders)
